# solana-staking-app

./: LICENSE  README.md
backend/: requirements.txt
backend/solana_staking/: settings.py  urls.py
backend/staking/: models.py  serializers.py  urls.py  views.py
smart-contract/: Cargo.toml
smart-contract/src/: lib.rs
